--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+####Unity specific gitignore####
 [Ll]ibrary/
 [Tt]emp/
 [Oo]bj/
@@ -34,3 +35,28 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+
+####Windows common files gitignore####
+# Windows thumbnail cache files
+Thumbs.db
+ehthumbs.db
+ehthumbs_vista.db
+
+# Dump file
+*.stackdump
+
+# Folder config file
+[Dd]esktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
